--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
-    "react-navigation": "^4.0.7"
+    "react-navigation": "^4.0.7",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
